--- a/app/views/application/_flashes.html.erb
+++ b/app/views/application/_flashes.html.erb
@@ -1,7 +1,7 @@
 <% if flash.any? %>
   <div class="flashes">
     <% user_facing_flashes.each do |key, value| -%>
-      <div class="flash-<%= key %>"><%= value %></div>
+      <div class="alert alert-<%= key %>"><%= value %></div>
     <% end -%>
   </div>
 <% end %>
