--- a/app/views/welcome/_user_login.html.erb
+++ b/app/views/welcome/_user_login.html.erb
@@ -1,8 +1,8 @@
 <% if signed_in? %>
       Signed in as: <%= current_user.email %>
-      <%= button_to 'Sign out', sign_out_path, method: :delete %>
+      <%= button_to 'Sign out', sign_out_path, method: :delete, class: 'btn btn-danger' %>
     <% else %>
-      <%= link_to 'Sign in', sign_in_path %>
+      <%= link_to 'Sign in', sign_in_path, class: 'btn btn-success' %>
     <% end %>
 
     <div id="flash">
