--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,2 +1,11 @@
 .container
   = render 'email_login'
+  hr
+  - if signed_in?
+    .row
+      .col-md-4
+        h4 Please select an account:
+      .col-md-8
+        ul
+          - current_user.accounts.each do |a|
+            li = link_to a.title, accounts_path(a.code)
