--- a/app/views/application/_navbar.html.slim
+++ b/app/views/application/_navbar.html.slim
@@ -6,5 +6,7 @@ nav.navbar.navbar-expand-md.navbar-dark.bg-dark.fixed-top
     ul.navbar-nav.mr-auto
       li.nav-item = link_to 'Home', root_path, class: 'nav-link'
       - if logged_in?
+        li.nav-item = link_to 'Your Profile', edit_users_contact_path,
+          class: 'nav-link'
         li.nav-item = link_to 'Logout', logout_path, method: :delete,
           class: 'nav-link'
