add message to login screen

--- a/app/views/welcome/_email_login.html.slim
+++ b/app/views/welcome/_email_login.html.slim
@@ -1,6 +1,10 @@
 - if logged_in?
   h1 Welcome, #{current_user}!
 - else
+  h1 Welcome to ZDN Enterprises, LLC.
+  p.lead
+    | Enter the email address that you typically use to contact ZDN
+      Enterprises, LLC.
   = simple_form_for Authentication::Email.new, url: login_email_path do |f|
     = f.input :email
     = f.submit 'Login', class: 'btn btn-primary'
