link to self enrollment

--- a/app/views/welcome/_email_login.html.slim
+++ b/app/views/welcome/_email_login.html.slim
@@ -8,3 +8,7 @@
   = simple_form_for Authentication::Email.new, url: login_email_path do |f|
     = f.input :email
     = f.submit 'Login', class: 'btn btn-primary'
+  hr
+  p.lead
+    ' Have a registration key?
+    = link_to 'CLICK HERE', authentication_path
