--- a/app/views/accounts/inbound_emails/index.html.slim
+++ b/app/views/accounts/inbound_emails/index.html.slim
@@ -1,5 +1,10 @@
 = render 'accounts/dashboard/nav'
 h1 Inbound Emails
+table.table-sm
+  tr
+    th Your Email Address
+    td
+      pre account+#{@account.code}@portal.zdn.enterprises
 table.table-sm.table-bordered.table-striped.table-hover
   thead
     tr
