--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -4,7 +4,7 @@
   - if logged_in?
     .row
       .col-md-4
-        h4 Please select an admin:
+        h4 Please select an account:
       .col-md-8
         ul
           - current_user.accounts.each do |a|
