Add a PDF instruction sheet with self enrollment instructions for each account

--- a/app/views/accounts/dashboard/show.html.slim
+++ b/app/views/accounts/dashboard/show.html.slim
@@ -22,3 +22,6 @@ hr
           tr
             td = doc.description
             td = link_to 'View', doc.asset.url, target: '_blank'
+hr
+  = link_to 'Registration Instructions', invite_account_path(@account.code, format: :pdf),
+          class: 'btn btn-sm btn-secondary'
