--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -9,3 +9,7 @@
         ul
           - current_user.accounts.each do |a|
             li = link_to a.title, account_path(a.code)
+        p
+          = link_to 'Add Account', authentication_path, class: 'btn btn-sm btn-secondary'
+          br
+          | (requires a registration key)
