--- a/app/views/accounts/dashboard/show.html.slim
+++ b/app/views/accounts/dashboard/show.html.slim
@@ -25,5 +25,14 @@ hr
                 td = doc.description
                 td = link_to 'View', doc.asset.url, target: '_blank'
 hr
+  .card
+    .card-body
+      h3.card-title Items Requiring Attention
+      ul.list-group
+        - @account.action_items.where(completed: false).each do |ai|
+          li.list-group-item
+            = ai.urgent? ? '[!]' : nil
+            = ai.description
+hr
   = link_to 'Registration Instructions', invite_account_path(@account.code, format: :pdf),
           class: 'btn btn-sm btn-secondary'
